Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -3830,6 +3830,221 @@
       "value": "લઘુત્તમ-ચોરસ રીગ્રેસન"
     }
   },
+  "ha": {
+    "custom.graphTitle": {
+      "value": "Custom"
+    },
+    "temperatureCelsiusLatitude.graphTitle": {
+      "value": "Yawan zafi (˚C) vs Nisan yamma"
+    },
+    "temperatureCelsiusLatitude.yAxisTitle": {
+      "value": "Adadin yawan zafi na watan janairu"
+    },
+    "temperatureCelsiusLatitude.xAxisTitle": {
+      "value": "Nisan yamm"
+    },
+    "temperatureCelsiusLatitude.reference": {
+      "value": "Kwatanta adadin yawan zafi a watan janairu na jahohi hamsin a kasar amurka da nisan yamman su"
+    },
+    "temperatureCelsiusLongitude.graphTitle": {
+      "value": "Yawan zafi  (˚C) vs gabas"
+    },
+    "temperatureCelsiusLongitude.yAxisTitle": {
+      "value": "Adadin yawan zafi a watan janairu"
+    },
+    "temperatureCelsiusLongitude.xAxisTitle": {
+      "value": "Gabas"
+    },
+    "temperatureCelsiusLongitude.reference": {
+      "value": "Kwatanta adadin yawan zafi a watan janairu na jahohi hamsin a kasar amurka da nisan gabas nasu"
+    },
+    "temperatureFahrenheitLatitude.graphTitle": {
+      "value": "Yawan zafi (˚F) vs yamma"
+    },
+    "temperatureFahrenheitLatitude.yAxisTitle": {
+      "value": "Adadin yawan zafi a watan janairu"
+    },
+    "temperatureFahrenheitLatitude.xAxisTitle": {
+      "value": "Nisan yamma"
+    },
+    "temperatureFahrenheitLatitude.reference": {
+      "value": "Kwatanta adadin yawan zafi a watan janairu na jahohi hamsin a kasar amurka da nisan yamman su"
+    },
+    "temperatureFahrenheitLongitude.graphTitle": {
+      "value": "Yawan zafï (˚F) vs. Nisan gabas"
+    },
+    "temperatureFahrenheitLongitude.yAxisTitle": {
+      "value": "Adadin yawan zafi a watan janairu (˚F)"
+    },
+    "temperatureFahrenheitLongitude.xAxisTitle": {
+      "value": "Gabas"
+    },
+    "temperatureFahrenheitLongitude.reference": {
+      "value": "Adadin yawan zafi a watan janairu a jahohi hamsin na amurka a kwatanta da nisan gabas"
+    },
+    "spendingSalary.graphTitle": {
+      "value": "Kashewar kudi vs albashi"
+    },
+    "spendingSalary.yAxisTitle": {
+      "value": "Adadin kahse kudin da ake kashewa ga ko wani dalibi a ko wani dubu naa dalla"
+    },
+    "spendingSalary.xAxisTitle": {
+      "value": "Adadin albashin mallamin a ko wani dubu na dalla"
+    },
+    "spendingSalary.reference": {
+      "value": "Kawtanta adadin kashe kudi ga ko wani dalibi da albsahin mmallamin makaranta a johohi hamsin na Smyrna a shekara ta 1986"
+    },
+    "wageYear.graphTitle": {
+      "value": "Mafi karancin albashi vs lokaci"
+    },
+    "wageYear.yAxisTitle": {
+      "value": "Gyara Mafi karancin albashi (USD) domin dacewa da karin tsadan rayuwa"
+    },
+    "wageYear.xAxisTitle": {
+      "value": "Shekaru tun 1947"
+    },
+    "wageYear.reference": {
+      "value": "Gyaran Kiman mafi karancin albashi a amurka daga shekara 1947-2005, saboda tsadan rayuwa"
+    },
+    "mortalityYear.graphTitle": {
+      "value": "Yawan mutuwan kwaro vs lokaci"
+    },
+    "mortalityYear.yAxisTitle": {
+      "value": "Yawan mutuwan kwaro"
+    },
+    "mortalityYear.xAxisTitle": {
+      "value": "Shekaru tun 1974"
+    },
+    "mortalityYear.reference": {
+      "value": "Jimillan yawan mutuwan kwaro a jihar Florida daga 1974-2004"
+    },
+    "userYear.graphTitle": {
+      "value": "Yawan masu amfani da yanar gizo vs lokaci"
+    },
+    "userYear.yAxisTitle": {
+      "value": "Jimillan masu amfani da yanar gizo (a billiyan)"
+    },
+    "userYear.xAxisTitle": {
+      "value": "Shekaru tun 1990"
+    },
+    "userYear.reference": {
+      "value": "Jimillan masu amfani da yanar gizo na dukka duniya daga 1990-2010"
+    },
+    "gasolineYear.graphTitle": {
+      "value": "Farashin iska(gas) a amurka vs lokaci"
+    },
+    "gasolineYear.yAxisTitle": {
+      "value": "Farashi ko wani galon a dalla amurka"
+    },
+    "gasolineYear.xAxisTitle": {
+      "value": "Shekaru tun 1976"
+    },
+    "gasolineYear.reference": {
+      "value": "Add in farashin iskan gas a ko wani shekara daga 1979-2014, ba gyara  soboda tsadan rayuwa ba"
+    },
+    "lifeTV.graphTitle": {
+      "value": "Tsawon lokacin rayuwa vs TVs"
+    },
+    "lifeTV.yAxisTitle": {
+      "value": "Tsawon lokacin rayuwa(shekaru)"
+    },
+    "lifeTV.xAxisTitle": {
+      "value": "Daidai yawan mutani ga ko wani tv"
+    },
+    "lifeTV.reference": {
+      "value": "Tsawon Lokacin rayuwa a massage arba'in yana kwatanta da daidai yawan mutane ga ko want TV a wannan kasa.\""
+    },
+    "speedDistance.graphTitle": {
+      "value": "Gudun zagaya vs nisa daga rana"
+    },
+    "speedDistance.yAxisTitle": {
+      "value": "Adadin Gudun zagaya (km/s)"
+    },
+    "speedDistance.xAxisTitle": {
+      "value": "Nisa daga rana"
+    },
+    "speedDistance.reference": {
+      "value": "Gudun zagayan duniya daga rana"
+    },
+    "temperatureFahrenheitChirp.graphTitle": {
+      "value": "Yawan zafi (˚F) vs kukan gyare"
+    },
+    "temperatureFahrenheitChirp.yAxisTitle": {
+      "value": "Yawan zafi (˚F)"
+    },
+    "temperatureFahrenheitChirp.xAxisTitle": {
+      "value": "Yawan kukan gyare a dakika goma sha biyar(15)"
+    },
+    "temperatureFahrenheitChirp.reference": {
+      "value": "Kwatanta Yawan kukan gyare a dakika goma sha biyar(15)/tsawon lokaci tare da yawan zafi a lokaci daya"
+    },
+    "temperatureCelsiusChirp.graphTitle": {
+      "value": "Yawan zafi (˚C) vs kukan gyare"
+    },
+    "temperatureCelsiusChirp.yAxisTitle": {
+      "value": "Yawan zafi (˚C)"
+    },
+    "temperatureCelsiusChirp.xAxisTitle": {
+      "value": "Yawan kukan gyare a dakika goma sha biyar(15)"
+    },
+    "temperatureCelsiusChirp.reference": {
+      "value": "Kwatanta Yawan kukan gyare a dakika goma sha biyar(15)/tsawon lokaci tare da yawan zafi a lokaci daya"
+    },
+    "heightShoe.graphTitle": {
+      "value": "Tsaayi vs girman takalmi"
+    },
+    "heightShoe.yAxisTitle": {
+      "value": "Tsawo (in)"
+    },
+    "heightShoe.xAxisTitle": {
+      "value": "Girman takalmi a amurka"
+    },
+    "heightShoe.reference": {
+      "value": "Girman takalmi ake hasashen tsawo"
+    },
+    "symbol.x": {
+      "value": "x"
+    },
+    "symbol.y": {
+      "value": "y"
+    },
+    "sum": {
+      "value": "Jimilla"
+    },
+    "bestFitLine": {
+      "value": "Layin da yafi dacewa"
+    },
+    "residuals": {
+      "value": "Raguwa"
+    },
+    "squaredResiduals": {
+      "value": "Squared Residuals"
+    },
+    "a": {
+      "value": "a"
+    },
+    "b": {
+      "value": "b"
+    },
+    "myLine": {
+      "value": "Layi na"
+    },
+    "symbol.r": {
+      "value": "r"
+    },
+    "correlationCoefficient": {
+      "value": "Alaka\\coefficiennt"
+    },
+    "sourcePattern": {
+      "value": "Source: {0}"
+    },
+    "questionMark": {
+      "value": "?"
+    },
+    "least-squares-regression.title": {
+      "value": "Least-Squares Regression "
+    }
+  },
   "ht": {
     "custom.graphTitle": {
       "value": "Pèsonalize"
