Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -4337,6 +4337,146 @@
       "value": "포물선 운동"
     }
   },
+  "lg": {
+    "cannonball": {
+      "value": "Omupiira gw’emmundu"
+    },
+    "pumpkin": {
+      "value": "Ensujju"
+    },
+    "baseball": {
+      "value": "Besibolo"
+    },
+    "car": {
+      "value": "Motooka"
+    },
+    "football": {
+      "value": "Kapiira"
+    },
+    "human": {
+      "value": "Omuntu"
+    },
+    "piano": {
+      "value": "Enaanga"
+    },
+    "golfBall": {
+      "value": "Omupiira gwa Goffu"
+    },
+    "tankShell": {
+      "value": "Ekisusunku kya ttanka"
+    },
+    "custom": {
+      "value": "Empisa oba enoono"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "mass": {
+      "value": "Obuzito "
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "diameter": {
+      "value": "Obunene"
+    },
+    "m": {
+      "value": "m"
+    },
+    "dragCoefficient": {
+      "value": "Tambuza Omugerageranyo"
+    },
+    "airResistance": {
+      "value": "Okuziyiza kw'empewo"
+    },
+    "velocityVectors": {
+      "value": "Entambula ya sipiidi "
+    },
+    "accelerationVectors": {
+      "value": "Enkyukakyuka yasipidi"
+    },
+    "total": {
+      "value": "Omugaate"
+    },
+    "components": {
+      "value": "Ebitundu"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "time": {
+      "value": "Obudde"
+    },
+    "s": {
+      "value": "s"
+    },
+    "range": {
+      "value": "Ebanga"
+    },
+    "height": {
+      "value": "Obuwanvu "
+    },
+    "initialSpeed": {
+      "value": "Sipiidi etandikibwako"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "meters": {
+      "value": "Mita"
+    },
+    "normal": {
+      "value": "Kyabulijo"
+    },
+    "slow": {
+      "value": "Mpola"
+    },
+    "screen.intro": {
+      "value": "Enyanjula "
+    },
+    "forceVectors": {
+      "value": "Amanyi g'entambula"
+    },
+    "altitude": {
+      "value": "Obugulumivu"
+    },
+    "screen.drag": {
+      "value": "Okusika"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "gravity": {
+      "value": "Ensikirizo"
+    },
+    "initialValues": {
+      "value": "Emiwendo egitandikibwako"
+    },
+    "angle": {
+      "value": "Ango"
+    },
+    "speed": {
+      "value": "Sipiidi "
+    },
+    "enter": {
+      "value": "Yingila"
+    },
+    "rangeMessage": {
+      "value": "{{min}} ku {{max}} {{units}}"
+    },
+    "screen.lab": {
+      "value": "Laabu "
+    },
+    "screen.vectors": {
+      "value": "Entambula "
+    },
+    "projectile-motion.title": {
+      "value": "Entambula ya Projectile"
+    }
+  },
   "lt": {
     "cannonball": {
       "value": "Patrankos šovinys"
