Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -7324,6 +7324,24 @@
     },
     "wageYear.yAxisTitle": {
       "value": "Płaca minimalna (USD) z uwzględnieniem inflacji"
+    },
+    "symbol.x": {
+      "value": "x"
+    },
+    "symbol.y": {
+      "value": "y"
+    },
+    "a": {
+      "value": "a"
+    },
+    "b": {
+      "value": "b"
+    },
+    "symbol.r": {
+      "value": "r"
+    },
+    "questionMark": {
+      "value": "?"
     }
   },
   "pt_BR": {
