--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -5801,7 +5801,7 @@
       "value": "Miara kąta"
     },
     "baseball": {
-      "value": "Piłka baseballowa"
+      "value": "Piłka bejsbolowa"
     },
     "cannonball": {
       "value": "Kula armatnia"
@@ -5895,6 +5895,36 @@
     },
     "velocityVectors": {
       "value": "Wektor prędkości"
+    },
+    "custom": {
+      "value": "Niestandardowy"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "m": {
+      "value": "m"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "s": {
+      "value": "s"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "enter": {
+      "value": "Enter"
     }
   },
   "pt": {
