Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -6160,6 +6160,51 @@
     },
     "projectile-motion.title": {
       "value": "Movimento de Projétil"
+    },
+    "piano": {
+      "value": "Piano"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "m": {
+      "value": "m"
+    },
+    "total": {
+      "value": "Total"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "s": {
+      "value": "s"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "normal": {
+      "value": "Normal"
+    },
+    "screen.intro": {
+      "value": "Intro"
+    },
+    "altitude": {
+      "value": "Altitude"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "rangeMessage": {
+      "value": "{{min}} to {{max}} {{units}}"
+    },
+    "screen.lab": {
+      "value": "Lab"
     }
   },
   "ro": {
