Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -3832,6 +3832,30 @@
     },
     "velocityVectors": {
       "value": "Vettori velocità"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "m": {
+      "value": "m"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "s": {
+      "value": "s"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
     }
   },
   "iw": {
