Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -1344,7 +1344,7 @@
       "value": "Pêl-fas"
     },
     "football": {
-      "value": "Pêl-droed "
+      "value": "Pêl-droed"
     },
     "human": {
       "value": "Bod dynol"
@@ -1377,7 +1377,7 @@
       "value": "Fectorau Cyflymiad"
     },
     "total": {
-      "value": "Cyfanswm "
+      "value": "Cyfanswm"
     },
     "components": {
       "value": "Cydrannau"
@@ -1434,7 +1434,7 @@
       "value": "Fectorau"
     },
     "projectile-motion.title": {
-      "value": "Mudiant Tafelgryn"
+      "value": "Mudiant Taflegryn"
     }
   },
   "da": {
