--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -654,7 +654,7 @@
       "value": "Normal"
     },
     "slow": {
-      "value": "Ləng hərəkət"
+      "value": "Yavaş"
     },
     "screen.intro": {
       "value": "Giriş"
@@ -690,7 +690,7 @@
       "value": "{{min}} to {{max}} {{units}}"
     },
     "screen.lab": {
-      "value": "Labarotoriya"
+      "value": "Laboratoriya"
     },
     "screen.vectors": {
       "value": "Vektorlar"
