Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -6290,7 +6290,7 @@
       "value": "Vector accelerație"
     },
     "total": {
-      "value": "Total "
+      "value": "Total"
     },
     "components": {
       "value": "Componente"
@@ -6366,6 +6366,9 @@
     },
     "projectile-motion.title": {
       "value": "Mișcarea proiectilelor"
+    },
+    "enter": {
+      "value": "Enter"
     }
   },
   "ru": {
