Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -6356,7 +6356,7 @@
       "value": "Viteză"
     },
     "rangeMessage": {
-      "value": "{{min}} to {{max}} {{units}}"
+      "value": "De la {{min}} la {{max}} {{units}}"
     },
     "screen.lab": {
       "value": "Laborator"
