--- a/_generated_development_strings/tappi_all.json
+++ b/_generated_development_strings/tappi_all.json
@@ -2,6 +2,12 @@
   "en": {
     "tappi.title": {
       "value": "Tappi Demo"
+    },
+    "screen.basics": {
+      "value": "Basics"
+    },
+    "screen.patterns": {
+      "value": "Patterns"
     }
   }
 }
