Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -830,6 +830,143 @@
       "value": "Рух у гравітацыйным полі"
     }
   },
+  "bg": {
+    "cannonball": {
+      "value": "Гюле"
+    },
+    "pumpkin": {
+      "value": "Тиква"
+    },
+    "baseball": {
+      "value": "Бейзболна топка"
+    },
+    "car": {
+      "value": "Кола"
+    },
+    "football": {
+      "value": "Футболна топка"
+    },
+    "human": {
+      "value": "Човек"
+    },
+    "piano": {
+      "value": "Пиано"
+    },
+    "golfBall": {
+      "value": "Голф топка"
+    },
+    "tankShell": {
+      "value": "Танков снаряд"
+    },
+    "custom": {
+      "value": "По избор"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "mass": {
+      "value": "Тегло"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "diameter": {
+      "value": "Диаметър"
+    },
+    "m": {
+      "value": "m"
+    },
+    "dragCoefficient": {
+      "value": "Коефициент на въздушно съпротивление"
+    },
+    "airResistance": {
+      "value": "Съпротивление на въздуха"
+    },
+    "velocityVectors": {
+      "value": "Вектори на скоростта"
+    },
+    "accelerationVectors": {
+      "value": "Вектори на ускорението"
+    },
+    "total": {
+      "value": "Общо"
+    },
+    "components": {
+      "value": "Компоненти"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "time": {
+      "value": "време"
+    },
+    "s": {
+      "value": "s"
+    },
+    "range": {
+      "value": "Обхват"
+    },
+    "height": {
+      "value": "Височина"
+    },
+    "initialSpeed": {
+      "value": "Начална скорост"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "meters": {
+      "value": "meters"
+    },
+    "normal": {
+      "value": "нормално"
+    },
+    "slow": {
+      "value": "бавно"
+    },
+    "screen.intro": {
+      "value": "Въведение"
+    },
+    "forceVectors": {
+      "value": "Вектори на силата"
+    },
+    "altitude": {
+      "value": "Надморска височина"
+    },
+    "screen.drag": {
+      "value": "Челно съпротивление"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "gravity": {
+      "value": "Гравитация"
+    },
+    "initialValues": {
+      "value": "Начални стойности"
+    },
+    "angle": {
+      "value": "Ъгъл на оръдието"
+    },
+    "speed": {
+      "value": "Скорост"
+    },
+    "enter": {
+      "value": "Въведи"
+    },
+    "rangeMessage": {
+      "value": "{{min}} до {{max}} {{units}}"
+    },
+    "screen.lab": {
+      "value": "Лаборатория"
+    },
+    "screen.vectors": {
+      "value": "Вектори"
+    },
+    "projectile-motion.title": {
+      "value": "Движение на снаряд"
+    }
+  },
   "bn": {
     "cannonball": {
       "value": "কামানের গোলা "
