Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -7564,7 +7564,7 @@
       "value": "Linha Melhor Ajustada"
     },
     "correlationCoefficient": {
-      "value": "   Coeficiente\nde correlação"
+      "value": "Coeficiente\nde correlação"
     },
     "custom.graphTitle": {
       "value": "Meus Dados"
@@ -7750,13 +7750,28 @@
       "value": "Salário Mínimo x Tempo"
     },
     "wageYear.reference": {
-      "value": "   O valor do salário mínimo nos EUA de \n1947-2005, ajustado pela inflação."
+      "value": "O valor do salário mínimo nos EUA de \n1947-2005, ajustado pela inflação."
     },
     "wageYear.xAxisTitle": {
       "value": "Anos (desde 1947)"
     },
     "wageYear.yAxisTitle": {
       "value": "Salário Mínimo (U$) x. Inflação Ajustada"
+    },
+    "symbol.x": {
+      "value": "x"
+    },
+    "symbol.y": {
+      "value": "y"
+    },
+    "a": {
+      "value": "a"
+    },
+    "b": {
+      "value": "b"
+    },
+    "questionMark": {
+      "value": "?"
     }
   },
   "ro": {
