Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -4048,7 +4048,7 @@
       "value": "סך הכל"
     },
     "components": {
-      "value": "מרכיבים"
+      "value": "רכיבים"
     },
     "time": {
       "value": "זמן"
@@ -4072,7 +4072,7 @@
       "value": "איטי"
     },
     "screen.intro": {
-      "value": "פתיחה"
+      "value": "מבוא"
     },
     "forceVectors": {
       "value": "וקטורי הכוחות"
@@ -4103,6 +4103,36 @@
     },
     "projectile-motion.title": {
       "value": "תנועת קליע"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "m": {
+      "value": "m"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "s": {
+      "value": "s"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "enter": {
+      "value": "כניסה"
+    },
+    "rangeMessage": {
+      "value": "{{min}} to {{max}} {{units}}"
     }
   },
   "ja": {
