Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -4970,7 +4970,7 @@
       "value": "Velocità media orbitale (km/s)"
     },
     "spendingSalary.graphTitle": {
-      "value": "Spese / Stipendio"
+      "value": "Spesa / Stipendio"
     },
     "spendingSalary.reference": {
       "value": "Spesa media per alunno rispetto alla spesa media \nper lo stipendio degli insegnanti in 50 Stati USA nel 1986"
@@ -5003,7 +5003,7 @@
       "value": "Temperatura (°C) / Latitudine"
     },
     "temperatureCelsiusLatitude.reference": {
-      "value": "Temperatura media di Gennaio nelle\n 50 maggiori città rispetto alla latitudine "
+      "value": "Temperatura media di Gennaio nelle\n 50 principali città rispetto alla latitudine"
     },
     "temperatureCelsiusLatitude.xAxisTitle": {
       "value": "Latitudine"
@@ -5042,7 +5042,7 @@
       "value": "Temperatura media di Gennaio \nnelle 50 principali città americane rispetto alla loro latitudine"
     },
     "temperatureFahrenheitLatitude.xAxisTitle": {
-      "value": "Latituidne"
+      "value": "Latitudine"
     },
     "temperatureFahrenheitLatitude.yAxisTitle": {
       "value": "Temperatura media di Gennaio (°F)"
@@ -5082,6 +5082,24 @@
     },
     "wageYear.yAxisTitle": {
       "value": "Salario minimo ($ USA) riferito all'inflazione"
+    },
+    "symbol.x": {
+      "value": "x"
+    },
+    "symbol.y": {
+      "value": "y"
+    },
+    "a": {
+      "value": "a"
+    },
+    "b": {
+      "value": "b"
+    },
+    "symbol.r": {
+      "value": "r"
+    },
+    "questionMark": {
+      "value": "?"
     }
   },
   "iw": {
