Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -4388,6 +4388,146 @@
       "value": "გასროლილი სხეული"
     }
   },
+  "ki": {
+    "cannonball": {
+      "value": "Ngari cia mbaara"
+    },
+    "pumpkin": {
+      "value": "Nyũngũ"
+    },
+    "baseball": {
+      "value": "Mũbira wa baseball"
+    },
+    "car": {
+      "value": "Ngari"
+    },
+    "football": {
+      "value": "Mbathi cia magũrũ"
+    },
+    "human": {
+      "value": "Andũ"
+    },
+    "piano": {
+      "value": "Piano"
+    },
+    "golfBall": {
+      "value": "Mũbira wa gorofu"
+    },
+    "tankShell": {
+      "value": "Ngunia cia rĩo"
+    },
+    "custom": {
+      "value": "uduire"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "mass": {
+      "value": "wingi"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "diameter": {
+      "value": "Ũtugi"
+    },
+    "m": {
+      "value": "m"
+    },
+    "dragCoefficient": {
+      "value": "Ũtaratara"
+    },
+    "airResistance": {
+      "value": "Ũgirĩrĩria wa Rũhuho"
+    },
+    "velocityVectors": {
+      "value": "Mathogora ma ihenya"
+    },
+    "accelerationVectors": {
+      "value": "Mahinda ma Kũhiũha"
+    },
+    "total": {
+      "value": "ciothe"
+    },
+    "components": {
+      "value": "Ciĩga"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "time": {
+      "value": "Mahinda"
+    },
+    "s": {
+      "value": "s"
+    },
+    "range": {
+      "value": "Ũraihu"
+    },
+    "height": {
+      "value": "Ũrĩ na igũrũ"
+    },
+    "initialSpeed": {
+      "value": "Hinya wa Kĩambĩrĩria"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "meters": {
+      "value": "mita"
+    },
+    "normal": {
+      "value": "Ũndũ ũrĩa wagĩrĩire"
+    },
+    "slow": {
+      "value": "Hihinya"
+    },
+    "screen.intro": {
+      "value": "Kĩambĩrĩria"
+    },
+    "forceVectors": {
+      "value": "Nguũ cia hinya"
+    },
+    "altitude": {
+      "value": "Igũrũ"
+    },
+    "screen.drag": {
+      "value": "Tũtambũrũkie"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "gravity": {
+      "value": "Ũhoti wa kũhuha"
+    },
+    "initialValues": {
+      "value": "Maũndũ ma Kĩambĩrĩria"
+    },
+    "angle": {
+      "value": "Njĩra"
+    },
+    "speed": {
+      "value": "Gũthiĩ na Mbere"
+    },
+    "enter": {
+      "value": "Andĩka"
+    },
+    "rangeMessage": {
+      "value": "{{min}}kũgerera {{max}} {{units}}"
+    },
+    "screen.lab": {
+      "value": "Labu"
+    },
+    "screen.vectors": {
+      "value": "Thogora"
+    },
+    "projectile-motion.title": {
+      "value": "Gũthiĩ na Mbere kwa Mĩtĩ"
+    }
+  },
   "ko": {
     "cannonball": {
       "value": "포탄"
