Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -9483,6 +9483,146 @@
       "value": "速度向量"
     }
   },
+  "zu": {
+    "cannonball": {
+      "value": "i-cannonball"
+    },
+    "pumpkin": {
+      "value": "ithanga"
+    },
+    "baseball": {
+      "value": "i-baseball"
+    },
+    "car": {
+      "value": "imoto"
+    },
+    "football": {
+      "value": "obhola lezinyawo"
+    },
+    "human": {
+      "value": "womuntu"
+    },
+    "piano": {
+      "value": "upiyano"
+    },
+    "golfBall": {
+      "value": "ibhola legalofu"
+    },
+    "tankShell": {
+      "value": "igobolondo lethangi"
+    },
+    "custom": {
+      "value": "ngokwezifiso"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "mass": {
+      "value": "ubuningi"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "diameter": {
+      "value": "ububanzi"
+    },
+    "m": {
+      "value": "m"
+    },
+    "dragCoefficient": {
+      "value": "hudula i- coefficient"
+    },
+    "airResistance": {
+      "value": "ukumelana komoya"
+    },
+    "velocityVectors": {
+      "value": "ama-vectors wesivinini"
+    },
+    "accelerationVectors": {
+      "value": "ama acceleration vectors"
+    },
+    "total": {
+      "value": "inani"
+    },
+    "components": {
+      "value": "izingxenye"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "time": {
+      "value": "isikhathi"
+    },
+    "s": {
+      "value": "s"
+    },
+    "range": {
+      "value": "ububanzi"
+    },
+    "height": {
+      "value": "ukuphakama"
+    },
+    "initialSpeed": {
+      "value": "isivinini sokuqala"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "meters": {
+      "value": "amamitha"
+    },
+    "normal": {
+      "value": "evamile"
+    },
+    "slow": {
+      "value": "kancane"
+    },
+    "screen.intro": {
+      "value": "isingeniso"
+    },
+    "forceVectors": {
+      "value": "phoqa ama-vectors"
+    },
+    "altitude": {
+      "value": "ukuphakana"
+    },
+    "screen.drag": {
+      "value": "hudula"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "gravity": {
+      "value": "amandla adonsela phansi"
+    },
+    "initialValues": {
+      "value": "amanani okuqala"
+    },
+    "angle": {
+      "value": "i-angle"
+    },
+    "speed": {
+      "value": "isivinini"
+    },
+    "enter": {
+      "value": "ngena"
+    },
+    "rangeMessage": {
+      "value": "{{min}} to {{max}} {{units}}"
+    },
+    "screen.lab": {
+      "value": "ilebhu"
+    },
+    "screen.vectors": {
+      "value": "ama-vectors"
+    },
+    "projectile-motion.title": {
+      "value": "ukunyakaza kwe-projectile"
+    }
+  },
   "en": {
     "projectile-motion.title": {
       "value": "Projectile Motion"
